--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  smooth_page_indicator: ^1.2.0+3
+  get: ^4.6.6
 
 dev_dependencies:
 
@@ -72,6 +74,9 @@ flutter:
 
   assets:
    - assets/images/bg1.jpg
+   - assets/images/1.png
+   - assets/images/2.png
+   - assets/images/3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -91,6 +96,11 @@ flutter:
     - family: Urbanist-Regular
       fonts:
           - asset: fonts/Urbanist-Regular.ttf
+
+
+    - family: Urbanist-SemiBold
+      fonts:
+        - asset: fonts/Urbanist-SemiBold.ttf
 
   #         weight: 700
   #
