--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.0+3
   get: ^4.6.6
+  supabase_auth_ui: ^0.5.3
 
 dev_dependencies:
 
@@ -77,6 +78,10 @@ flutter:
    - assets/images/1.png
    - assets/images/2.png
    - assets/images/3.png
+   - assets/images/logo1.png
+   - assets/images/facebook.png
+   - assets/images/google.png
+   - assets/images/apple.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
