--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,21 +37,35 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.0+3
   get: ^4.6.6
-  supabase_auth_ui: ^0.5.3
+  flutter_launcher_icons: ^0.14.1
+  shared_preferences: ^2.3.2
+  http: ^1.2.2
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
 
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.14.1"
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
-  image_path: "assets/logo.png"
+  remove_alpha_ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 24 # android min sdk min:16, default 21
+  adaptive_icon_background: "assets/images/logo.png" # You can use a color or image for the background
+  adaptive_icon_foreground: "assets/images/logo.png" # For adaptive icons on Android
 
 
-
+flutter_native_splash:
+  android: true
+  ios: false
+  web: false
+  image: assets/images/launch.png  # Path to your splash screen logo
+  color: "#FFFFFF"  # Background color (white in this case, change as needed)
+  android_gravity: center  # Adjust positioning of the image
+  ios_content_mode: center  # Adjust positioning of the image for iOS
+  fullscreen: true  # Use full-screen splash screen
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -59,7 +73,6 @@ flutter_launcher_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -74,24 +87,7 @@ flutter:
 
 
   assets:
-   - assets/images/bg1.jpg
    - assets/images/
-   - assets/images/2.png
-   - assets/images/3.png
-   - assets/images/logo1.png
-   - assets/images/facebook.png
-   - assets/images/google.png
-   - assets/images/apple.png
-   - assets/images/hamburger.png
-   - assets/images/SpecialOffers.png
-   - assets/images/pizza.png
-   - assets/images/Filter.png
-   - assets/images/Sort.png
-   - assets/images/pizzaItem.jpg
-   - assets/images/vegetable.png
-   - assets/images/img.png
-   - assets/images/Iconsdell.png
-   - assets/images/MaskGroup.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
