--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  jwt_decoder: ^2.0.1
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.0+3
   get: ^4.6.6
