--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
 
@@ -36,12 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   jwt_decoder: ^2.0.1
   cupertino_icons: ^1.0.8
+  geolocator: ^13.0.1
   smooth_page_indicator: ^1.2.0+3
   get: ^4.6.6
   flutter_launcher_icons: ^0.14.1
   http: ^1.2.2
   flutter_native_splash: ^2.4.1
   shared_preferences: ^2.3.2
+  provider: ^6.1.2
 
 dev_dependencies:
 
