--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.8
 
 
   # The following adds the Cupertino Icons font to your application.
