--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,18 +38,16 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
   remove_alpha_ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/icons/logo.png"
   min_sdk_android: 24 # android min sdk min:16, default 21
-  adaptive_icon_background: "assets/images/logo.png" # You can use a color or image for the background
-  adaptive_icon_foreground: "assets/images/logo.png" # For adaptive icons on Android
+  adaptive_icon_background: "assets/icons/logo.png" # You can use a color or image for the background
+  adaptive_icon_foreground: "assets/icons/logo.png" # For adaptive icons on Android
 
 
 
 
 
 flutter:
-
-
   uses-material-design: true
 
 
